<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Cricket">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/who_is_the_best_cricketer_in_the_world"/>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/sachin_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sachin_tendulkar"/>

            <RadioButton
                android:id="@+id/virat_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/virat_kolli"/>

            <RadioButton
                android:id="@+id/adam_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adam_gilchirst"/>

            <RadioButton
                android:id="@+id/kallis_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jacques_kallis"/>

        </RadioGroup>

    </LinearLayout>

    <include layout="@layout/toolbar_layout"/>

</RelativeLayout>