<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.IndianFlag">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_are_the_colors_in_the_indian_national_flag"
            android:textSize="20sp"
            android:gravity="center"/>

        <CheckBox
            android:id="@+id/chk_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginStart="50dp"
            android:text="@string/white"
            android:onClick="onCheckboxClicked"/>
        <CheckBox
            android:id="@+id/chk_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginStart="50dp"
            android:text="@string/yellow"
            android:onClick="onCheckboxClicked"/>
        <CheckBox
            android:id="@+id/chk_orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginStart="50dp"
            android:text="@string/orange"
            android:onClick="onCheckboxClicked"/>
        <CheckBox
            android:id="@+id/chk_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginStart="50dp"
            android:text="@string/green"
            android:onClick="onCheckboxClicked"/>

    </LinearLayout>

    <include layout="@layout/toolbar_layout" />

</RelativeLayout>